# embeddings-classifier

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build.sh  build_and_push.sh  build_testing_image.sh  launch.jsonc  pyproject.toml  pytest.container.ini  pytest.host.ini  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  manual_release.yml  test_and_build.yml
scripts/: README.md  binned_selection.py  constants.py  get_version.sh  inference_params_example.json  postprocess_from_ecosounds_1.py  postprocess_from_ecosounds_2.py  requirements.txt  run_container.ps1  run_container.py  run_model_on_ecosounds.py  run_model_on_ecosounds_2.py  stratify.py  test_tokens.sh
src/: app.py
src/embeddings_classifier/: __init__.py  app.py  config.py
tests/: conftest.py  helpers.py
tests/docker/: conftest.py  test_docker_integration.py  test_scripts.py
tests/files/config/: config1.json  config2.json
tests/files/parquet/: 20230324T090000+1100_Kl9_3372829.wav.parquet
tests/test_data/config/: ci_lmr_config_sep2025.json  config1.json  config2.json  config_classifier_only.json  grtbgw.json  grtbgw_with_thresholds_1.json  my_classifier.json  run_script_params_1.json  run_script_params_2.json
tests/test_data/parquet/: 3757025.parquet  url_list_1.json
tests/test_data/predictions/: grtbgw.csv
tests/tests/: conftest.py  helpers.py  test_app.py  test_classify.py  test_utility_functions.py
tests/unit/: conftest.py  test_app.py  test_classify.py  test_utility_functions.py  unit_helpers.py
